Added plot.svps and updated documentation for print.svps

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(coef,svps)
 S3method(cv,fps)
 S3method(plot,fps)
 S3method(plot,fps_cv)
+S3method(plot,svps)
 S3method(predict,fps)
 S3method(print,fps)
 S3method(print,fps_coef)
