Export generic projection() method in NAMESPACE Added fixrank parameter to projection.fps() Moved methods for extracting projection matrix and basis coefficient estimates to coef.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(print,fps_coef)
 S3method(projection,fps)
 export(as.prcomp)
 export(fps)
+export(projection)
 import(RcppArmadillo)
 import(ggplot2)
 import(grid)
