Added importFrom(Rcpp, evalCpp) and import(RcppArmadillo) to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,8 +16,10 @@ S3method(projection,svps)
 export(as.prcomp)
 export(fps)
 export(svps)
+import(RcppArmadillo)
 import(ggplot2)
 import(grid)
 import(reshape2)
 import(scales)
+importFrom(Rcpp,evalCpp)
 useDynLib(fps)
