Added importFrom(Rcpp, evalCpp) and import(RcppArmadillo) to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,10 @@ S3method(print,fps_coef)
 S3method(projection,fps)
 export(as.prcomp)
 export(fps)
+import(RcppArmadillo)
 import(ggplot2)
 import(grid)
 import(reshape2)
 import(scales)
+importFrom(Rcpp,evalCpp)
 useDynLib(fps)
