Export generic method cv()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(print,fps)
 S3method(print,fps_coef)
 S3method(projection,fps)
 export(as.prcomp)
+export(cv)
 export(fps)
 export(projection)
 import(RcppArmadillo)
