Removed as.prcomp() Removed unnecessary Imports (methods, grid, scales) from DESCRIPTION and fps-package.R Added Matrix to DEPENDS Remove print methods for fps_coef and svps_coef coef() method for fps and svps now returns the matrix of coefficients as a Matrix Moved documentation for wine into a separate file.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,16 +5,14 @@ Authors@R: c(person(c("Vincent", "Q"), "Vu", role = c("aut", "cre"), email =
     "vqv@stat.osu.edu"))
 Description: ADMM algorithm for FPS
 Depends:
-    R (>= 3.1.0)
+    R (>= 3.1.0),
+    Matrix
 Imports:
     BH,
-    methods,
     ggplot2,
-    grid,
     reshape2,
     Rcpp (>= 0.11.0),
-    RcppArmadillo (>= 0.4.320.0),
-    scales
+    RcppArmadillo (>= 0.4.320.0)
 LinkingTo: BH, Rcpp, RcppArmadillo
 License: GPL (>= 2)
 Suggests:
